[package]
name = "tgit"
version = "0.2.0"
edition = "2021"
description = "TGIT is a tool for managing git repositories."
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.35"
clap = { version = "4.5.2", features = ["derive"] }
colored = "2.1.0"
git2 = "0.18.2"
regex = "1.10.3"
reqwest = { version = "0.11.25", features = ["blocking"] }
semver = "1.0.22"
serde_json = "1.0.114"
structopt = "0.3.26"
strsim = "0.11.0"
inquire = "0.7.1"
